WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129747
FTL loadStructure always generates invalid IR
https://bugs.webkit.org/show_bug.cgi?id=129747
Summary
FTL loadStructure always generates invalid IR
Filip Pizlo
Reported
2014-03-05 10:59:47 PST
Patch forthcoming.
Attachments
the patch
(11.06 KB, patch)
2014-03-05 11:54 PST
,
Filip Pizlo
mhahnenberg
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2014-03-05 11:54:36 PST
Created
attachment 225898
[details]
the patch
Mark Hahnenberg
Comment 2
2014-03-05 12:02:38 PST
Comment on
attachment 225898
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=225898&action=review
r=me
> Source/JavaScriptCore/ftl/FTLOutput.h:210 > + // are actuall integers. This requires an LLVM pointer. Broadly speaking, you don't
actually
Filip Pizlo
Comment 3
2014-03-05 12:21:58 PST
Landed in
http://trac.webkit.org/changeset/165119
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug